Hero img, html validated, layout main responsive and contrast fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -39,7 +39,8 @@
         display: block;
         padding: 1rem;
         text-decoration: none;
-        color: #fdca40;
+        color: black;
+        
         font-family: 'Roboto', sans-serif;
     }
 
@@ -102,4 +103,113 @@
     .menu-btn.active .menu-btn__line:nth-child(3) {
         transform: translateY(-6px) rotate(-45deg);
     }
+    
+    main div {
+        display: flex;
+        background-color: lightgray;
+        height: auto;
+        width: auto;
+        margin: 5px;
+    }
+
+    #hero-content {
+        position: relative;
+        display: flex;
+        grid-template-columns: 1fr;
+    
+    }
+    
+    .hero {
+        position: relative;
+        grid-column: 1;
+        width: 100%;
+        height: auto;
+    }
+    
+    .hero-img {
+        width: 100%;
+        height: 500px;
+    }
+    
+    .hero h2 {
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #df2935;
+        z-index: 1;
+    }
+    
+    .button {
+        position: absolute;
+        top: 80%;
+        left: 5%;
+        transform: translate(-10%, -30%);
+        display: block;
+        padding: 10px 20px;
+        height: 15px;
+        background-color: #df2935;
+        color: #e6e8e6;
+        text-decoration: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+    
+    .button:hover {
+        background-color: #3772ff;
+    }
+    
+    #events-weather {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+    
+    .events {
+        grid-column: 1;
+        grid-row: 1/3;
+        width: 100%;
+        height: 300px;
+    
+    }
+    
+    .weather {
+        grid-column: 1;
+        grid-row: 2/2;
+        width: 100%;
+        height: 300px;
+    
+    }
+    
+    #spotlights {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-row: 3;
+    }
+    
+    .spotlight-1 {
+        grid-column: 1;
+        grid-row: 1/4;
+        width: auto;
+        height: 300px;
+    }
+    
+    .spotlight-2 {
+        grid-column: 1;
+        grid-row: 2/4;
+        width: auto;
+        height: 300px;
+    }
+    
+    .spotlight-3 {
+        grid-column: 1;
+        grid-row: 3/4;
+        width: auto;
+        height: 300px;
+    }
+    
+
+    
+
 }
