--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -59,19 +59,51 @@ body {
 }
 
 #hero-content {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr;
 
 }
 
+.hero-img {
+    width: 100%;
+    height: auto;
+}
+
+.hero h2 {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #df2935;
+    z-index: 1;
+}
+
 .hero {
+    position: relative;
     grid-column: 1;
     width: auto;
     height: 600px;
 }
 
-#action-call {
-    height: 30px;
+.button {
+    position: absolute;
+    top: 80%;
+    left: 5%;
+    transform: translate(-40%, -50%);
+    display: block;
+    padding: 10px 20px;
+    height: 15px;
+    background-color: #df2935;
+    color: #e6e8e6;
+    text-decoration: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.button:hover {
+    background-color: #3772ff;
 }
 
 main div {
